[metadata]
name = classy-env
version = attr: classyenv.__version__
url = https://github.com
author = Mateusz Meksuła
description = Utils for managing environment variables
long_description = file: README.MD
license = MIT
classifiers = 
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities

[options]
packages = 
    classyenv
package_dir = 
    =src
python_requires = >= 3.11
